--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-edge-to-edge": "^1.4.0",
+    "react-native-nitro-modules": "^0.18.2",
     "react-native-safe-area-context": "4.14.0",
-    "react-native-unistyles": "2.20.0",
+    "react-native-unistyles": "^3.0.0-beta.4",
     "react-native-web": "0.19.13",
     "react-native-zephyr": "1.1.2",
     "styled-components": "6.1.13",
