| WIP - Testing Forms, Cards and Unistyle v3, gluestack and resusable |

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
 {
   "compilerOptions": {
     "paths": {
+      "~/*": [
+        "*"
+      ],
       "@/*": [
         "./*"
       ],
       "tailwind.config": [
         "./tailwind.config.js"
       ]
-    }
+    },
+    "baseUrl": "."
   },
   "exclude": [
     "node_modules"
