--- a/package.json
+++ b/package.json
@@ -4,40 +4,73 @@
   "scripts": {
     "start": "expo start -c",
     "start:prod": "expo start --no-dev --minify",
-    "android": "expo run:android",
-    "web": "expo start --web",
-    "ios": "expo run:ios"
+    "android": "DARK_MODE=media expo run:android",
+    "web": "DARK_MODE=media expo start --web",
+    "ios": "DARK_MODE=media expo run:ios"
   },
   "dependencies": {
     "@emotion/native": "11.11.0",
     "@emotion/react": "11.13.5",
+    "@expo/html-elements": "0.4.2",
     "@fast-styles/react": "0.2.9",
+    "@gluestack-ui/actionsheet": "^0.2.46",
+    "@gluestack-ui/button": "^1.0.8",
+    "@gluestack-ui/checkbox": "^0.1.33",
+    "@gluestack-ui/icon": "^0.1.25",
+    "@gluestack-ui/image": "^0.1.11",
+    "@gluestack-ui/input": "^0.1.32",
+    "@gluestack-ui/nativewind-utils": "^1.0.26",
+    "@gluestack-ui/overlay": "^0.1.16",
+    "@gluestack-ui/pressable": "^0.1.17",
+    "@gluestack-ui/radio": "^0.1.34",
+    "@gluestack-ui/select": "^0.1.30",
+    "@gluestack-ui/switch": "^0.1.23",
+    "@gluestack-ui/textarea": "^0.1.24",
+    "@gluestack-ui/toast": "^1.0.8",
+    "@legendapp/motion": "^2.4.0",
+    "@rn-primitives/checkbox": "^1.1.0",
+    "@rn-primitives/label": "^1.1.0",
+    "@rn-primitives/portal": "^1.1.0",
+    "@rn-primitives/radio-group": "^1.1.0",
+    "@rn-primitives/select": "^1.1.0",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/switch": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
     "@shopify/restyle": "2.4.4",
-    "@tamagui/animations-react-native": "1.118.1",
-    "@tamagui/config": "1.118.1",
-    "@tamagui/core": "1.118.1",
-    "@tamagui/font-inter": "1.118.1",
-    "@tamagui/react-native-media-driver": "1.118.1",
-    "@tamagui/shorthands": "1.118.1",
-    "@tamagui/theme-base": "1.118.1",
-    "@tamagui/themes": "1.118.1",
+    "@tamagui/config": "^1.122.0",
+    "@tamagui/lucide-icons": "^1.122.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "detox-cli": "^20.0.0",
     "dripsy": "4.3.8",
     "expo": "52.0.12",
     "expo-font": "13.0.1",
+    "expo-navigation-bar": "~4.0.7",
     "expo-splash-screen": "0.29.13",
     "expo-status-bar": "2.0.0",
-    "nativewind": "4.1.23",
+    "lucide-react-native": "^0.471.0",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-css-interop": "^0.1.22",
     "react-native-edge-to-edge": "^1.4.0",
-    "react-native-nitro-modules": "^0.18.2",
-    "react-native-safe-area-context": "4.14.0",
-    "react-native-unistyles": "^3.0.0-beta.4",
+    "react-native-gesture-handler": "^2.22.0",
+    "react-native-nitro-modules": "^0.21.0",
+    "react-native-paper": "^5.13.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-ui-lib": "^7.35.0",
+    "react-native-unistyles": "^3.0.0-nightly-20250121",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "0.19.13",
     "react-native-zephyr": "1.1.2",
     "styled-components": "6.1.13",
-    "tamagui": "1.118.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tamagui": "^1.122.0",
     "twrnc": "4.6.0"
   },
   "devDependencies": {
@@ -47,7 +80,9 @@
     "@tamagui/metro-plugin": "^1.118.1",
     "@types/react": "18.3.12",
     "@types/react-native": "0.72.8",
-    "tailwindcss": "3.4.15"
+    "jscodeshift": "0.15.2",
+    "tailwindcss": "^3.4.17"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
